# database-optimizer

./: .gitignore  README.md  main.py  pyproject.toml
examples/: download_nyc_taxi.py
scripts/: generate_dataset.py  integration_test.py  optimize.py  run_nyc_taxi_workload.py  run_schema_workload.py  run_workload.py
src/database_optimiser/: __init__.py  config.py
src/database_optimiser/adaptive/: __init__.py  bandit.py  contextual_bandit.py  explorer.py
src/database_optimiser/analyzer/: __init__.py  column_stats.py  workload_analyzer.py  workload_clusterer.py
src/database_optimiser/cli/: __init__.py  main.py  reporting.py  ui.py
src/database_optimiser/evaluator/: __init__.py  metrics.py  (+3 more)
tests/: test_bandit_ignores_none_rewards.py  test_candidate_beam_search.py  test_cli_observability.py  test_cli_run_workload_explore.py  test_contextual_bandit_derived_and_union.py  test_contextual_policy_no_per_layout_db_scans.py  test_contextual_routing.py  test_eval_scheduler.py  test_explorer_backfill_evaluations.py  test_incremental_partition_safety.py  test_integration_exploration_loop.py  test_layout_generator_candidates.py  test_layout_migrator_rowgroup_constraint.py  test_metadata_migrations_and_activation.py  test_migration_jobs.py  test_migrator_atomic_and_naming.py  test_migrator_sort_mode_none.py  test_migrator_spec_immutability_and_notes.py  test_query_context_diagnostics.py  test_reward_eval_status_seed_and_rewrite_normalizer.py  test_reward_gating.py  test_reward_v2.py  test_scenario_suite.py  test_workload_clustering.py  test_workload_runner_routing.py
(+13 files in other folders)
