[project]
name = "database-optimiser"
version = "0.1.0"
description = "Adaptive Layout Generator: a system that observes query workloads and automatically rewrites data layouts to minimize query latency"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=0.9.0",
    "pyarrow>=12.0.0",
    "numpy>=1.24.0",
    "click>=8.1.0",
    "pandas>=2.3.3",
    "rich>=13.7.0",
    "sqlglot>=27.0.0",
]

[project.scripts]
dbopt = "database_optimiser.cli.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.12.0",
    "ty>=0.0.1",
]

[tool.ruff]
line-length = 79
target-version = "py39"
extend-exclude = ["data/**", "metadata.db"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["database_optimiser"]

